# fin-doc-chatbot

./: Requirements Spec file.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  docker-compose.db.yml  docker-compose.yml  pyproject.toml
backend/app/: cache.py  config.py  database.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/crew/: agents.py  crew.py  tasks.py
backend/app/db/: mongo.py
backend/app/models/: base.py  conversation.py  document.py  user.py
backend/app/routers/: auth.py  chat.py  health.py
backend/app/schemas/: auth.py  chat.py
backend/app/security/: auth.py
backend/app/services/: auth_service.py  chat_service.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
frontend/fin-doc-analyzer-frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/fin-doc-analyzer-frontend/src/: App.css  App.tsx
frontend/src/: App.css  App.tsx  AppRouter.tsx  index.css  main.tsx
frontend/src/components/: PageShell.tsx
frontend/src/pages/: AdminDashboardPage.tsx  ChatPage.tsx  LoginPage.tsx  PendingApprovalPage.tsx  RegisterPage.tsx  UserDashboardPage.tsx
frontend/src/services/: api.ts  auth.tsx
nginx/: nginx.conf
plans/: AGENTS.md  API.md  DATABASE.md  DEPLOYMENT.md  FRONTEND.md  README.md  backend-architecture-plan.md  docker-compose-unified-plan.md  frontend-auth-plan.md  frontend-chat-implementation-plan.md
