[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.7.0",
    "motor>=3.6.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt[crypto]>=2.9.0",
    "python-multipart>=0.0.17",
    "redis>=5.2.1",
    "aioboto3>=13.2.0",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "opentelemetry-sdk>=1.28.2",
    "opentelemetry-exporter-otlp>=1.28.2",
    "structlog>=24.4.0",
    "email-validator>=2.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]
