[project]
name = "backend"
version = "0.1.0"
description = "Financial Document Analyzer Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy==2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "redis>=7.2.0",
    "crewai==1.9.3",
    "langchain-openai>=0.1.0",
    "openai>=1.83.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-dotenv==1.1.1",
    "structlog>=25.5.0",
    "orjson>=3.11.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
